seaqt/QtCore/gen_qurl.nim


proc fcQUrl_operatorAssignFrom(self: pointer, fromVal: pointer): void {.importc: "QUrl_operatorAssign_from".}
proc fcQUrl_operatorAssignUrl(self: pointer, url: struct_seaqt_string): void {.importc: "QUrl_operatorAssign_url".}
proc fcQUrl_swap(self: pointer, other: pointer): void {.importc: "QUrl_swap".}
proc fcQUrl_setUrlUrl(self: pointer, url: struct_seaqt_string): void {.importc: "QUrl_setUrl_url".}
proc fcQUrl_url(self: pointer): struct_seaqt_string {.importc: "QUrl_url".}
proc fcQUrl_toString(self: pointer): struct_seaqt_string {.importc: "QUrl_toString".}
proc fcQUrl_toDisplayString(self: pointer): struct_seaqt_string {.importc: "QUrl_toDisplayString".}
proc fcQUrl_toEncoded(self: pointer): struct_seaqt_string {.importc: "QUrl_toEncoded".}
proc fcQUrl_fromEncodedUrl(url: struct_seaqt_string): pointer {.importc: "QUrl_fromEncoded_url".}
proc fcQUrl_fromUserInputUserInput(userInput: struct_seaqt_string): pointer {.importc: "QUrl_fromUserInput_userInput".}
proc fcQUrl_isValid(self: pointer): bool {.importc: "QUrl_isValid".}
proc fcQUrl_errorString(self: pointer): struct_seaqt_string {.importc: "QUrl_errorString".}
proc fcQUrl_isEmpty(self: pointer): bool {.importc: "QUrl_isEmpty".}
proc fcQUrl_clear(self: pointer): void {.importc: "QUrl_clear".}
proc fcQUrl_setScheme(self: pointer, scheme: struct_seaqt_string): void {.importc: "QUrl_setScheme".}
proc fcQUrl_scheme(self: pointer): struct_seaqt_string {.importc: "QUrl_scheme".}
proc fcQUrl_setAuthorityAuthority(self: pointer, authority: struct_seaqt_string): void {.importc: "QUrl_setAuthority_authority".}
proc fcQUrl_authority(self: pointer): struct_seaqt_string {.importc: "QUrl_authority".}
proc fcQUrl_setUserInfoUserInfo(self: pointer, userInfo: struct_seaqt_string): void {.importc: "QUrl_setUserInfo_userInfo".}
proc fcQUrl_userInfo(self: pointer): struct_seaqt_string {.importc: "QUrl_userInfo".}
proc fcQUrl_setUserNameUserName(self: pointer, userName: struct_seaqt_string): void {.importc: "QUrl_setUserName_userName".}
proc fcQUrl_userName(self: pointer): struct_seaqt_string {.importc: "QUrl_userName".}
proc fcQUrl_setPasswordPassword(self: pointer, password: struct_seaqt_string): void {.importc: "QUrl_setPassword_password".}
proc fcQUrl_password(self: pointer): struct_seaqt_string {.importc: "QUrl_password".}
proc fcQUrl_setHostHost(self: pointer, host: struct_seaqt_string): void {.importc: "QUrl_setHost_host".}
proc fcQUrl_host(self: pointer): struct_seaqt_string {.importc: "QUrl_host".}
proc fcQUrl_setPort(self: pointer, port: cint): void {.importc: "QUrl_setPort".}
proc fcQUrl_port(self: pointer): cint {.importc: "QUrl_port".}
proc fcQUrl_setPathPath(self: pointer, path: struct_seaqt_string): void {.importc: "QUrl_setPath_path".}
proc fcQUrl_path(self: pointer): struct_seaqt_string {.importc: "QUrl_path".}
proc fcQUrl_fileName(self: pointer): struct_seaqt_string {.importc: "QUrl_fileName".}
proc fcQUrl_hasQuery(self: pointer): bool {.importc: "QUrl_hasQuery".}
proc fcQUrl_setQuery_QString(self: pointer, query: struct_seaqt_string): void {.importc: "QUrl_setQuery_QString".}
proc fcQUrl_setQuery_QUrlQuery(self: pointer, query: pointer): void {.importc: "QUrl_setQuery_QUrlQuery".}
proc fcQUrl_query(self: pointer): struct_seaqt_string {.importc: "QUrl_query".}
proc fcQUrl_hasFragment(self: pointer): bool {.importc: "QUrl_hasFragment".}
proc fcQUrl_fragment(self: pointer): struct_seaqt_string {.importc: "QUrl_fragment".}
proc fcQUrl_setFragmentFragment(self: pointer, fragment: struct_seaqt_string): void {.importc: "QUrl_setFragment_fragment".}
proc fcQUrl_resolved(self: pointer, relative: pointer): pointer {.importc: "QUrl_resolved".}
proc fcQUrl_isRelative(self: pointer): bool {.importc: "QUrl_isRelative".}
proc fcQUrl_isParentOf(self: pointer, url: pointer): bool {.importc: "QUrl_isParentOf".}
proc fcQUrl_isLocalFile(self: pointer): bool {.importc: "QUrl_isLocalFile".}
proc fcQUrl_fromLocalFile(localfile: struct_seaqt_string): pointer {.importc: "QUrl_fromLocalFile".}
proc fcQUrl_toLocalFile(self: pointer): struct_seaqt_string {.importc: "QUrl_toLocalFile".}
proc fcQUrl_detach(self: pointer): void {.importc: "QUrl_detach".}
proc fcQUrl_isDetached(self: pointer): bool {.importc: "QUrl_isDetached".}
proc fcQUrl_operatorLesser(self: pointer, url: pointer): bool {.importc: "QUrl_operatorLesser".}
proc fcQUrl_operatorEqual(self: pointer, url: pointer): bool {.importc: "QUrl_operatorEqual".}
proc fcQUrl_operatorNotEqual(self: pointer, url: pointer): bool {.importc: "QUrl_operatorNotEqual".}
proc fcQUrl_fromPercentEncoding(param1: struct_seaqt_string): struct_seaqt_string {.importc: "QUrl_fromPercentEncoding".}
proc fcQUrl_toPercentEncoding_QString(param1: struct_seaqt_string): struct_seaqt_string {.importc: "QUrl_toPercentEncoding_QString".}
proc fcQUrl_fromAceDomain(domain: struct_seaqt_string): struct_seaqt_string {.importc: "QUrl_fromAce_domain".}
proc fcQUrl_toAceDomain(domain: struct_seaqt_string): struct_seaqt_string {.importc: "QUrl_toAce_domain".}
proc fcQUrl_idnWhitelist(): struct_seaqt_array {.importc: "QUrl_idnWhitelist".}
proc fcQUrl_toStringListUris(uris: struct_seaqt_array): struct_seaqt_array {.importc: "QUrl_toStringList_uris".}
proc fcQUrl_fromStringListUris(uris: struct_seaqt_array): struct_seaqt_array {.importc: "QUrl_fromStringList_uris".}
proc fcQUrl_setIdnWhitelist(idnWhitelist: struct_seaqt_array): void {.importc: "QUrl_setIdnWhitelist".}
proc fcQUrl_setUrlUrlMode(self: pointer, url: struct_seaqt_string, mode: cint): void {.importc: "QUrl_setUrl_url_mode".}
proc fcQUrl_fromEncodedUrlMode(url: struct_seaqt_string, mode: cint): pointer {.importc: "QUrl_fromEncoded_url_mode".}
proc fcQUrl_fromUserInputUserInputWorkingDirectory(userInput: struct_seaqt_string, workingDirectory: struct_seaqt_string): pointer {.importc: "QUrl_fromUserInput_userInput_workingDirectory".}
proc fcQUrl_fromUserInputUserInputWorkingDirectoryOptions(userInput: struct_seaqt_string, workingDirectory: struct_seaqt_string, options: cint): pointer {.importc: "QUrl_fromUserInput_userInput_workingDirectory_options".}
proc fcQUrl_setAuthorityAuthorityMode(self: pointer, authority: struct_seaqt_string, mode: cint): void {.importc: "QUrl_setAuthority_authority_mode".}
proc fcQUrl_authorityOptions(self: pointer, options: cint): struct_seaqt_string {.importc: "QUrl_authority_options".}
proc fcQUrl_setUserInfoUserInfoMode(self: pointer, userInfo: struct_seaqt_string, mode: cint): void {.importc: "QUrl_setUserInfo_userInfo_mode".}
proc fcQUrl_userInfoOptions(self: pointer, options: cint): struct_seaqt_string {.importc: "QUrl_userInfo_options".}
proc fcQUrl_setUserNameUserNameMode(self: pointer, userName: struct_seaqt_string, mode: cint): void {.importc: "QUrl_setUserName_userName_mode".}
proc fcQUrl_userNameOptions(self: pointer, options: cint): struct_seaqt_string {.importc: "QUrl_userName_options".}
proc fcQUrl_setPasswordPasswordMode(self: pointer, password: struct_seaqt_string, mode: cint): void {.importc: "QUrl_setPassword_password_mode".}
proc fcQUrl_password_QUrl_ComponentFormattingOptions(self: pointer, param1: cint): struct_seaqt_string {.importc: "QUrl_password_QUrl_ComponentFormattingOptions".}
proc fcQUrl_setHostHostMode(self: pointer, host: struct_seaqt_string, mode: cint): void {.importc: "QUrl_setHost_host_mode".}
proc fcQUrl_host_QUrl_ComponentFormattingOptions(self: pointer, param1: cint): struct_seaqt_string {.importc: "QUrl_host_QUrl_ComponentFormattingOptions".}
proc fcQUrl_portDefaultPort(self: pointer, defaultPort: cint): cint {.importc: "QUrl_port_defaultPort".}
proc fcQUrl_setPathPathMode(self: pointer, path: struct_seaqt_string, mode: cint): void {.importc: "QUrl_setPath_path_mode".}
proc fcQUrl_pathOptions(self: pointer, options: cint): struct_seaqt_string {.importc: "QUrl_path_options".}
proc fcQUrl_fileNameOptions(self: pointer, options: cint): struct_seaqt_string {.importc: "QUrl_fileName_options".}
proc fcQUrl_setQuery_QString_QUrl_ParsingMode(self: pointer, query: struct_seaqt_string, mode: cint): void {.importc: "QUrl_setQuery_QString_QUrl_ParsingMode".}
proc fcQUrl_query_QUrl_ComponentFormattingOptions(self: pointer, param1: cint): struct_seaqt_string {.importc: "QUrl_query_QUrl_ComponentFormattingOptions".}
proc fcQUrl_fragmentOptions(self: pointer, options: cint): struct_seaqt_string {.importc: "QUrl_fragment_options".}
proc fcQUrl_setFragmentFragmentMode(self: pointer, fragment: struct_seaqt_string, mode: cint): void {.importc: "QUrl_setFragment_fragment_mode".}
proc fcQUrl_toPercentEncoding_QString_QByteArray(param1: struct_seaqt_string, exclude: struct_seaqt_string): struct_seaqt_string {.importc: "QUrl_toPercentEncoding_QString_QByteArray".}
proc fcQUrl_toPercentEncoding_QString_QByteArray_QByteArray(param1: struct_seaqt_string, exclude: struct_seaqt_string, includeVal: struct_seaqt_string): struct_seaqt_string {.importc: "QUrl_toPercentEncoding_QString_QByteArray_QByteArray".}
proc fcQUrl_fromAceDomainOptions(domain: struct_seaqt_string, options: cint): struct_seaqt_string {.importc: "QUrl_fromAce_domain_options".}
proc fcQUrl_toAceDomainOptions(domain: struct_seaqt_string, options: cint): struct_seaqt_string {.importc: "QUrl_toAce_domain_options".}
proc fcQUrl_fromStringListUrisMode(uris: struct_seaqt_array, mode: cint): struct_seaqt_array {.importc: "QUrl_fromStringList_uris_mode".}
proc fcQUrl_new(): ptr cQUrl {.importc: "QUrl_new".}
proc fcQUrl_new2(fromVal: pointer): ptr cQUrl {.importc: "QUrl_new_from".}
proc fcQUrl_new3(url: struct_seaqt_string): ptr cQUrl {.importc: "QUrl_new_url".}
proc fcQUrl_new4(url: struct_seaqt_string, mode: cint): ptr cQUrl {.importc: "QUrl_new_url_mode".}

proc operatorAssign*(self: gen_qurl_types.QUrl, fromVal: gen_qurl_types.QUrl): void =
  fcQUrl_operatorAssignFrom(self.h, fromVal.h)

proc operatorAssign*(self: gen_qurl_types.QUrl, url: openArray[char]): void =
  fcQUrl_operatorAssignUrl(self.h, struct_seaqt_string(data: if len(url) > 0: addr url[0] else: nil, len: csize_t(len(url))))

proc swap*(self: gen_qurl_types.QUrl, other: gen_qurl_types.QUrl): void =
  fcQUrl_swap(self.h, other.h)

proc setUrl*(self: gen_qurl_types.QUrl, url: openArray[char]): void =
  fcQUrl_setUrlUrl(self.h, struct_seaqt_string(data: if len(url) > 0: addr url[0] else: nil, len: csize_t(len(url))))

proc url*(self: gen_qurl_types.QUrl): string =
  let v_ms = fcQUrl_url(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc toString*(self: gen_qurl_types.QUrl): string =
  let v_ms = fcQUrl_toString(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc toDisplayString*(self: gen_qurl_types.QUrl): string =
  let v_ms = fcQUrl_toDisplayString(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc toEncoded*(self: gen_qurl_types.QUrl): seq[byte] =
  var v_bytearray = fcQUrl_toEncoded(self.h)
  var vx_ret = @(toOpenArray(cast[ptr UncheckedArray[byte]](v_bytearray.data), 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc fromEncoded*(_: type gen_qurl_types.QUrl, url: openArray[byte]): gen_qurl_types.QUrl =
  gen_qurl_types.QUrl(h: fcQUrl_fromEncodedUrl(struct_seaqt_string(data: if len(url) > 0: addr url[0] else: nil, len: csize_t(len(url)))), owned: true)

proc fromUserInput*(_: type gen_qurl_types.QUrl, userInput: openArray[char]): gen_qurl_types.QUrl =
  gen_qurl_types.QUrl(h: fcQUrl_fromUserInputUserInput(struct_seaqt_string(data: if len(userInput) > 0: addr userInput[0] else: nil, len: csize_t(len(userInput)))), owned: true)

proc isValid*(self: gen_qurl_types.QUrl): bool =
  fcQUrl_isValid(self.h)

proc errorString*(self: gen_qurl_types.QUrl): string =
  let v_ms = fcQUrl_errorString(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc isEmpty*(self: gen_qurl_types.QUrl): bool =
  fcQUrl_isEmpty(self.h)

proc clear*(self: gen_qurl_types.QUrl): void =
  fcQUrl_clear(self.h)
